# saucenao-discord-bot-rs

./: Cargo.toml  LICENSE.txt  README.md  xbuild
.github/workflows/: ci.yml
src/: hooks.rs  main.rs
src/commands/: about.rs  help.rs  mod.rs  sauce.rs  speak.rs  terms.rs
