[package]
name = "saucenao-discord-bot-rs"
version = "0.1.0"
authors = ["Mițca Dumitru <dumitru0mitca@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2.0", features = ["macros", "signal", "rt-multi-thread"] }
futures = "0.3"

tracing = "0.1.23"
tracing-subscriber = "0.2.15"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
