[package]
name = "saucenao-discord-bot-rs"
version = "0.1.0"
authors = ["Mițca Dumitru <dumitru0mitca@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.4.0", features = ["macros", "signal", "rt-multi-thread"] }
futures = "0.3.13"

tracing = "0.1.25"
tracing-subscriber = "0.2.17"

dotenv = "0.15.0"
url = "2.2.1"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"

[dependencies.sauce-api]
git = "https://github.com/lyssieth/sauce-api"
branch = "master"
default-features = false
features = ["rustls", "saucenao"]
