[package]
name = "saucenao-discord-bot-rs"
version = "0.1.0"
authors = ["Mițca Dumitru <dumitru0mitca@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.6.0", features = ["macros", "signal", "rt-multi-thread"] }
futures = "0.3.15"

tracing = "0.1.26"
tracing-subscriber = "0.2.18"

dotenv = "0.15.0"
url = "2.2.2"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"

[dependencies.sauce-api]
git = "https://github.com/lyssieth/sauce-api"
branch = "master"
default-features = false
features = ["rustls", "saucenao"]
